--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,12 @@
 * {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 200;
+  color: white;
+}
+
+h1 {
+  font-weight: 200;
 }
 
 body {
@@ -9,6 +15,9 @@ body {
   align-items: center;
   text-align: center;
   padding: 0;
+  background: linear-gradient(260deg, #fe621d, #e996b6, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
 }
 
 form {
@@ -29,4 +38,24 @@ form {
 
 #buttons button {
   border-radius: 1rem;
+  border: solid 1px black;
+  transition-duration: 0.5s;
+  color: black;
+}
+#buttons button:hover {
+  color: white;
+  background-color: blue;
+  border: solid 1px white;
+}
+
+#submitbutton {
+  border-radius: 1rem;
+  border: solid 1px black;
+  transition-duration: 0.5s;
+  color: black;
+}
+#submitbutton:hover {
+  color: white;
+  background-color: green;
+  border: solid 1px white;
 }
